k8s/apps/firefly/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly
  template:
    metadata:
      labels:
        app: firefly
    spec:
      containers:
        - name: firefly
          image: fireflyiii/core:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: firefly-data
              mountPath: /var/www/html/storage/upload
      volumes:
        - name: firefly-data
          persistentVolumeClaim:
            claimName: firefly-pvc
