k8s/apps/firefly/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-mysql
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly-mysql
  template:
    metadata:
      labels:
        app: firefly-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: firefly-mysql-pvc
