k8s/apps/firefly/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-mysql-svc
  namespace: apps
spec:
  selector:
    app: firefly-mysql
  ports:
    - port: 3306
      targetPort: 3306
