k8s/apps/firefly/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-svc
  namespace: apps
spec:
  selector:
    app: firefly
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: firefly.marcosoto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: firefly-svc
                port:
                  number: 80
  tls:
    - hosts:
        - firefly.marcosoto.dev
      secretName: marcosoto-dev-tls
